--- a/Trabajo_Navidades_Diego_Sanchez/pom.xml
+++ b/Trabajo_Navidades_Diego_Sanchez/pom.xml
@@ -37,6 +37,21 @@
             <artifactId>jsvg</artifactId>
             <version>1.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.15.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
