--- a/Trabajo_Navidades_Diego_Sanchez/pom.xml
+++ b/Trabajo_Navidades_Diego_Sanchez/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
